# codeismoe.github.io

./: .gitignore  about.org  codeismoe-github-io.cabal  contact.org  default.nix  flake.nix  index.html  shell.nix  site.hs
css/: about.css  default.css
docs/: CNAME  about  about.html  archive  archive.html  contact  contact.html  index.html
docs/css/: about.css  default.css
templates/: default.html
