name:               codeismoe-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll
                  , pandoc
                  , pandoc-types
                  , containers
                  , text
                  , wai-app-static
                  
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
